test/should-pass/empty-trait-on-object/exe.dk
// -*- mode: C++; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

klass object
{
}

int-t main()
{
  return 0;
}
