test/should-fail/autorelease-w-no-enclosing-pool/exe.dk
// -*- mode: C++; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

int-t main()
{
  object-t o = make(object:klass);
  dk:autorelease(o);
  return 0;
}
